tests/compile-fail/suzu_multiple_location_types.stderr
error: multiple fields with type name ending in `Location` found; use #[suzu(location)] to specify the correct one. Note: detection uses the last path segment, so types like `geo::Location` also match.
 --> tests/compile-fail/suzu_multiple_location_types.rs:9:5
  |
9 |     #[snafu(implicit)]
  |     ^
